Remove inline styles

--- a/11-Boostrap/11.3 TinDog Project/index.html
+++ b/11-Boostrap/11.3 TinDog Project/index.html
@@ -74,7 +74,7 @@
 
     <!-- Features -->
     <section id="features">
-      <div class="container px-4 mt-5">
+      <div class="container mt-5">
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
             <div
@@ -150,7 +150,7 @@
       </div>
     </section>
     <!-- Testimonial -->
-    <section id="testimonial" style="background-color: var(--bs-secondary-bg);">
+    <section id="testimonial">
       <div class="my-5">
         <div class="p-5 text-center bg-body-tertiary">
           <div class="container py-5">
