--- a/13-Capstone-Project-Portfolio-Site/index.html
+++ b/13-Capstone-Project-Portfolio-Site/index.html
@@ -2,13 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <title>Dany-Duran</title>
 </head>
 <body>
-    <main>
+    <main >
 
         <nav>
-            <div>
+            <!-- <div>
                 <span>Dany-Duran</span>
             </div>
 
@@ -22,23 +23,73 @@
                     <li>Contact me</li>
                 </ul>
 
+            </div> -->
+
+            <div class="container"> 
+                <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> 
+                    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> 
+                        <span class="fs-4">Dany-Duran</span> 
+                    </a> 
+                    <ul class="nav nav-pills"> 
+                        <li class="nav-item">
+                            <a href="#" class="nav-link" aria-current="page">Home</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">About me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Work Experience</a>
+                        </li> 
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">Skills</a>
+                        </li> 
+                        <!-- <li class="nav-item">
+                            <a href="#" class="nav-link">Contact me</a>
+                        </li> -->
+                        <li class="nav-item">
+                            <button type="button" class="btn btn-primary px-3">Contact me</button> 
+                        </li>
+                        </ul> 
+                </header> 
             </div>
+
         </nav>
 
         <section class="hero">
-            <div>
+            <!-- <div>
                 <h3>Hi, I'm Dany-Duran</h3>
                 <h4>a Software Engineer and an avid Follower of Christ</h4>
 
                 <p class="location">Bujumbura, Burundi</p>
 
                 <button><a href="#">Download</a></button>
-            </div>
+            </div> -->
 
+            <div class="px-4 py-5 my-5 text-center"> 
+                <h1 class="display-5 fw-bold text-body-emphasis">
+                    Hi, I'm Dany-Duran
+                </h1> 
+                <div class="col-lg-6 mx-auto"> 
+                    <p class="lead mb-4">
+                        a Software Engineer and an avid Follower of Christ
+                    </p>
+                    <p class="lead mb-4">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                        </svg>
+                         Bujumbura, Burundi
+                    </p> 
+                    <!-- <div class="d-grid gap-2 d-sm-flex justify-content-sm-center"> 
+                        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Download</button> 
+                        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button> 
+                    </div> -->
+                </div>
+            </div>
 
             <div></div>
         </section>
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 </body>
 </html>
