--- a/13-Capstone-Project-Portfolio-Site/index.html
+++ b/13-Capstone-Project-Portfolio-Site/index.html
@@ -1,69 +1,310 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,700&display=swap"
+        rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-        <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <title>Dany-Duran</title>
 </head>
+
 <body>
-    <main id="container">
-        <nav>
+    <nav>
+        <div>
+            <span>Dany-Duran</span>
+        </div>
+
+        <div class="links">
+
+            <ul class="link-line">
+                <li><a class="nav-link" href="#about">About me</a></li>
+                <li><a class="nav-link" href="#experience">Experience</a></li>
+                <li><a class="nav-link" href="#skills">Skills</a></li>
+                <li><a class="nav-link" href="#projects">Projects</a></li>
+                <li><a class="nav-link btn-light" href="#contact">Contact me</a></li>
+            </ul>
+
+        </div>
+    </nav>
+    <hr>
+    <section class="hero">
+        <div>
+            <h1 class="display-3 fw-bold mt-5"
+                style="font-family: 'Open Sauce One', sans-serif; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">Hi,
+                I'm Dany-Duran</h1>
+
             <div>
-                <span>Dany-Duran</span>
+                <!-- <p class="fw-normal text-muted mb-2 mt-5">a Software Engineer Student and an avid Follower of Christ
+                </p> -->
+                <p class="location fw-normal text-muted mb-2 mt-5">
+                    <img src="./assets/icons/geo-alt-fill.svg" alt="geolocalisation pin" width="40"
+                        height="40">Bujumbura, Burundi
+                </p>
             </div>
 
-            <div class="links">
+            <div class="social-links">
+                <ul class="link-line">
+                    <li class="btn"><a class="nav-link" href="http://github.com/DANY-DURAND" target="_blank"
+                            rel="noopener noreferrer"><img src="./assets/icons/github.svg" alt="Github Icon" height="40"
+                                width="40">GitHub</a></li>
+                    <li class="btn">
+                        <a class="nav-link" href="https://linkedin.com/in/dannydurandnzigamasabo" target="_blank"><img
+                                src="./assets/icons/linkedin.svg" alt="Github Icon" height="40" width="40">LinkedIn</a>
+                    </li>
 
-                <ul>
-                    <li><a class="nav-link" href="#about">About me</a></li>
-                    <li><a class="nav-link" href="#experience">Experience</a></li>
-                    <li><a class="nav-link" href="#skills">Skills</a></li>
-                    <li><a class="nav-link" href="#projects">Projects</a></li>
-                    <li><a class="nav-link btn-light" href="#contact">Contact me</a></li>
+                    <li class="btn">
+                        <a href="mailto:dannydurandnzigamasabo@gmail.com" class="nav-link"><img
+                                src="./assets/icons/at.svg" alt="at icon" height="40" width="40">
+                            Email</a>
+                    </li>
                 </ul>
-
             </div>
-        </nav>
-        <hr>
 
-        <section class="hero">
-            <div>
-                <h1>Hi, I'm Dany-Duran</h1>
+        </div>
+    </section>
+    <section id="about">
+        <div
+            class="position-relative overflow-hidden p-3 p-md-5 text-center bg-body-tertiary gradient-background vh-100">
+            <div class="container-fluid d-flex align-items-center justify-content-center">
+                <div class="col-md-6 p-lg-5 mx-auto my-5">
+                    <h1 class="display-3 fw-bold mt-5"
+                        style="font-family: 'Open Sauce One', sans-serif; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">
+                        Who Am I?
+                    </h1>
+                    <h3 id="animated-text" class="fw-normal text-muted mb-3 mt-5"
+                        style="font-family: 'Space Mono', monospace; color: white;">
+                        Hi, I'm a Software Engineering student from Burundi, seeking
+                        growth opportunities with a detail-oriented and customer-focused
+                        mindset. I have a passion for leveraging technology to innovate.
+                    </h3>
+                    <div class="d-flex gap-3 justify-content-center lead fw-normal"></div>
+                </div>
+                <div class="product-device shadow-sm d-none d-md-block"></div>
+                <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
+            </div>
+        </div>
+    </section>
 
-                <div>
-                    <p>a Software Engineer Student and an avid Follower of Christ</p>
-                    <p class="location">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
-                        </svg>
-                        Bujumbura, Burundi
-                    </p>
+    <section id="skills" class="skills-section py-5 ">
+        <div class="container my-5">
+            <h1 class="display-4 mb-5 text-center "
+                style="font-family: 'Open Sauce One', sans-serif;  font-size: 4rem; font-weight: bold;">
+                Skills
+            </h1>
+            <div class="row justify-content-around">
+                <div class="col-lg-4 mb-4 skill-row">
+                    <div class="card text-center p-4 rounded shadow-sm">
+                        
+                        <h2 class="display-5 mt-3" style="font-family: 'Open Sauce One', sans-serif">
+                            <!-- <img src="./assets/images/braces.svg" alt="Programming Skills" width="50" height="50" /> -->
+                            Programming Skills
+                        </h2>
+                        <p class="lead" style="font-family: 'Space Mono', monospace">
+                            Skills with programming languages like Python, Java,
+                            JavaScript and Bash in different coding environments and applications.
+                        </p>
+                    </div>
                 </div>
 
-                <div class="social-links">
-                    <ul>
-                        <li>GitHub</li>
-                        <li>LinkedIn</li>
-                        <li>Fontend Mentor</li>
-                        <li>Email</li>
-                    </ul>
+                <div class="col-lg-4  mb-4 skill-row second-row">
+                    <div class="card text-center p-4 rounded shadow-sm">
+                        <!-- <img src="./assets/images/code-square.svg" alt="Full Stack Development" width="50"
+                            height="50" /> -->
+                        <h2 class="display-5 mt-3" style="font-family: 'Open Sauce One', sans-serif">
+                            Full Stack Development
+                        </h2>
+                        <p class="lead" style="font-family: 'Space Mono', monospace">
+                            Skills with Front-End and Back-End Development with HTML, CSS, CSS
+                            Frameworks, PHP, JavaScript, and currently
+                            learning NextJS.
+                        </p>
+                    </div>
                 </div>
 
+                <div class="col-lg-4 mb-4 skill-row">
+                    <div class="card text-center p-4 rounded shadow-sm">
+                        <!-- <img src="./assets/images/database.svg" alt="Database Administration" width="50" height="50" /> -->
+                        <h2 class="display-5 mt-3" style="font-family: 'Open Sauce One', sans-serif">
+                            Database Administration
+                        </h2>
+                        <p class="lead" style="font-family: 'Space Mono', monospace">
+                            Skills in Database languages and administration which include
+                            SQL Server, MySQL, PL/SQL and Oracle, and PostgresSQL.
+                        </p>
+                    </div>
+                </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+
+    <section id="my-work">
+        <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-body-tertiary ">
+
+            <div class="container my-5">
+                <h1 class="display-4 mb-5 text-center "
+                    style="font-family: 'Open Sauce One', sans-serif;  font-size: 4rem; font-weight: bold;">
+                    Projects
+                </h1>
+
+                <div class="container my-5">
+                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
+                            <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
+                                style="font-family: 'Open Sauce One', sans-serif">Product Card</h1>
+                            <p class="lead" style="font-family: 'Space Mono', monospace">
+                                This is a challenge from Frontend Mentor website. Frontend Mentor challenges help you improve your coding skills by building realistic projects
+                            </p>
+
+                            <a href="https://blog-card-frm.netlify.app/four-card-feature-section"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 display-5 botonsillo"
+                            style="font-family: 'Space Mono', monospace">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/DANY-DURAND/frontend-mentor-challenges/tree/main/four-card-feature-section" target="_blank"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"
+                            style="font-family: 'Space Mono', monospace">
+                            GitHub
+                        </a>
+                        </div>
+                        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/product-card.jpg" alt="" width="720"
+                                height="370">
+                        </div>
+                    </div>
+
+                    <div class="container my-5">
+                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
+                            <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
+                                style="font-family: 'Open Sauce One', sans-serif">Recipe Page</h1>
+                            <p class="lead" style="font-family: 'Space Mono', monospace">
+                                This is a challenge from Frontend Mentor website. Frontend Mentor challenges help you improve your coding skills by building realistic projects. It uses Html and CSS.
+                            </p>
+
+                            <a href="https://blog-card-frm.netlify.app/recipe-page-main"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 display-5 botonsillo"
+                            style="font-family: 'Space Mono', monospace">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/DANY-DURAND/frontend-mentor-challenges/tree/main/recipe-page-main" target="_blank"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"
+                            style="font-family: 'Space Mono', monospace">
+                            GitHub
+                        </a>
+                        </div>
+                        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/preview.jpg" alt="" width="720"
+                                height="370">
+                        </div>
+                    </div>
+
+                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                            <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
+                                style="font-family: 'Open Sauce One', sans-serif">Restaurant Website</h1>
+                            <p class="lead" style="font-family: 'Space Mono', monospace">
+                                A carefully designed website for a restaurant, it showcases the menu of the place and a
+                                form to place an order, it was completed with HTML, CSS and JS
+                            </p>
+                        </div>
+                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/deliciousCooking.png" alt="" width="720"
+                                height="370">
+                        </div>
+                    </div>
+
+                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                            <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
+                                style="font-family: 'Open Sauce One', sans-serif">Selenium Projects</h1>
+                            <p class="lead" style="font-family: 'Space Mono', monospace">
+                                Throughout my experience, I've worked on numerous Selenium projects. Particularly
+                                noteworthy was the automation of test procedures for a gym website, assessing elements
+                                like credentials, link functionality, and overall efficacy.
+                            </p>
+                        </div>
+                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/selenium2.jpeg" alt="" width="720"
+                                height="370">
+                        </div>
+                    </div>
+
+                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                            <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
+                                style="font-family: 'Open Sauce One', sans-serif">Oracle Projects</h1>
+                            <p class="lead" style="font-family: 'Space Mono', monospace">
+                                I have plenty of experience in sql and pl/sql amongst which my most preferred was the
+                                creation and management for a company's database in oracle sql developer and made a
+                                connection with a python application designed with Tkinter.
+                            </p>
+                        </div>
+                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/oracleLogo.jpeg" alt="" width="720"
+                                height="370">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+    </section>
+
+    <section id="contact-me">
+        <div id="particles-js">
+            <div class="jumbotron-container">
+                <div class="container my-5">
+                    <div class="p-5 text-center bg-body-tertiary rounded">
+                        <img src="./assets/images/envelope.svg" class="bi mt-4 mb-3" width="50" height="50" />
+                        <h1 class="text-body-emphasis mb-5" style="
+                  font-family: 'Open Sauce One', sans-serif;
+                  font-weight: 300;
+                  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+                ">
+                            Let's Connect!
+                        </h1>
+                        <a href="mailto:dannydurandnzigamasabo@gmail.com"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 display-5 botonsillo"
+                            style="font-family: 'Space Mono', monospace">
+                            Contact via Email
+                        </a>
+                        <a href="https://www.linkedin.com/in/dannydurandnzigamasabo" target="_blank"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"
+                            style="font-family: 'Space Mono', monospace">
+                            Contact via LinkedIn
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div id="btn-container">
+                <a href="#top" class="back-to-top-btn" style="font-family: 'Space Mono', monospace">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-chevron-compact-up" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z" />
+                    </svg>
+                    Back to Top
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer"></section>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
