Refactor navigation links and update project descriptions for clarity and consistency

--- a/13-Capstone-Project-Portfolio-Site/index.html
+++ b/13-Capstone-Project-Portfolio-Site/index.html
@@ -26,10 +26,10 @@
 
             <ul class="link-line">
                 <li><a class="nav-link" href="#about">About me</a></li>
-                <li><a class="nav-link" href="#experience">Experience</a></li>
+                <!-- <li><a class="nav-link" href="#experience">Experience</a></li> -->
                 <li><a class="nav-link" href="#skills">Skills</a></li>
-                <li><a class="nav-link" href="#projects">Projects</a></li>
-                <li><a class="nav-link btn-light" href="#contact">Contact me</a></li>
+                <li><a class="nav-link" href="#Projects">Projects</a></li>
+                <li><a class="nav-link btn-light" href="#contact-me">Contact me</a></li>
             </ul>
 
         </div>
@@ -44,7 +44,7 @@
             <div>
                 <!-- <p class="fw-normal text-muted mb-2 mt-5">a Software Engineer Student and an avid Follower of Christ
                 </p> -->
-                <p class="location fw-normal text-muted mb-2 mt-5">
+                <p class="location fw-normal text-muted mb-2 mt-4">
                     <img src="./assets/icons/geo-alt-fill.svg" alt="geolocalisation pin" width="40"
                         height="40">Bujumbura, Burundi
                 </p>
@@ -52,16 +52,16 @@
 
             <div class="social-links">
                 <ul class="link-line">
-                    <li class="btn"><a class="nav-link" href="http://github.com/DANY-DURAND" target="_blank"
+                    <li><a class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap" href="http://github.com/DANY-DURAND" target="_blank"
                             rel="noopener noreferrer"><img src="./assets/icons/github.svg" alt="Github Icon" height="40"
                                 width="40">GitHub</a></li>
-                    <li class="btn">
-                        <a class="nav-link" href="https://linkedin.com/in/dannydurandnzigamasabo" target="_blank"><img
+                    <li>
+                        <a class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap" href="https://linkedin.com/in/dannydurandnzigamasabo" target="_blank"><img
                                 src="./assets/icons/linkedin.svg" alt="Github Icon" height="40" width="40">LinkedIn</a>
                     </li>
 
-                    <li class="btn">
-                        <a href="mailto:dannydurandnzigamasabo@gmail.com" class="nav-link"><img
+                    <li>
+                        <a href="mailto:dannydurandnzigamasabo@gmail.com" class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"><img
                                 src="./assets/icons/at.svg" alt="at icon" height="40" width="40">
                             Email</a>
                     </li>
@@ -145,7 +145,7 @@
         </div>
     </section>
 
-    <section id="my-work">
+    <section id="Projects">
         <div class="position-relative overflow-hidden p-3 p-md-5 text-center bg-body-tertiary ">
 
             <div class="container my-5">
@@ -176,7 +176,7 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
                             <img class="rounded-lg-3" src="./assets/images/product-card.jpg" alt="" width="720"
-                                height="370">
+                                height="390">
                         </div>
                     </div>
 
@@ -202,43 +202,64 @@
                         </div>
                         <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
                             <img class="rounded-lg-3" src="./assets/images/preview.jpg" alt="" width="720"
-                                height="370">
+                                height="450">
                         </div>
                     </div>
 
                     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
-                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
                             <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
-                                style="font-family: 'Open Sauce One', sans-serif">Restaurant Website</h1>
+                                style="font-family: 'Open Sauce One', sans-serif">Bookstore ecommerce</h1>
                             <p class="lead" style="font-family: 'Space Mono', monospace">
-                                A carefully designed website for a restaurant, it showcases the menu of the place and a
-                                form to place an order, it was completed with HTML, CSS and JS
+                                A carefully designed website for an ecommerce website for a Bookstore, The purpose of the project was to provide customers with a seamless shopping experience, including ease of selection, secure payment options, an intuitive recommendation catalog, and comprehensive details about the books they were purchasing. 
                             </p>
+
+                            <a href="https://blog-card-frm.netlify.app/recipe-page-main"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 display-5 botonsillo"
+                            style="font-family: 'Space Mono', monospace">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/DANY-DURAND/frontend-mentor-challenges/tree/main/recipe-page-main" target="_blank"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"
+                            style="font-family: 'Space Mono', monospace">
+                            GitHub
+                        </a>
+
                         </div>
-                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                            <img class="rounded-lg-3" src="./assets/images/deliciousCooking.png" alt="" width="720"
-                                height="370">
+                        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/Bookstore.png" alt="" width="720"
+                                height="630">
                         </div>
                     </div>
 
                     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
-                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
                             <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
-                                style="font-family: 'Open Sauce One', sans-serif">Selenium Projects</h1>
+                                style="font-family: 'Open Sauce One', sans-serif">Ecommerce Dashboard</h1>
                             <p class="lead" style="font-family: 'Space Mono', monospace">
-                                Throughout my experience, I've worked on numerous Selenium projects. Particularly
-                                noteworthy was the automation of test procedures for a gym website, assessing elements
-                                like credentials, link functionality, and overall efficacy.
+                                For the shop owners, we integrated a data collection system to track user preferences, analyze the effectiveness of promotions, and monitor the entire conversion phase from customer engagement to purchase.
                             </p>
+
+                            <a href="#"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 display-5 botonsillo"
+                            style="font-family: 'Space Mono', monospace">
+                            Live Demo
+                        </a>
+                        <a href="https://github.com/DANY-DURAND/" target="_blank"
+                            class="btn btn-outline-dark btn-lg px-4 rounded-pill mt-3 botonsillo text-nowrap"
+                            style="font-family: 'Space Mono', monospace">
+                            GitHub
+                        </a>
+
                         </div>
-                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
-                            <img class="rounded-lg-3" src="./assets/images/selenium2.jpeg" alt="" width="720"
-                                height="370">
+                        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                            <img class="rounded-lg-3" src="./assets/images/Dashboard.png" alt="" width="720"
+                                height="500">
                         </div>
                     </div>
 
-                    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
-                        <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
+                    <!-- <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg mb-5">
+                        <div class="col-lg-5 p-3 p-lg-5 pt-lg-3">
                             <h1 class="display-4 fw-bold lh-1 text-body-emphasis"
                                 style="font-family: 'Open Sauce One', sans-serif">Oracle Projects</h1>
                             <p class="lead" style="font-family: 'Space Mono', monospace">
@@ -247,11 +268,11 @@
                                 connection with a python application designed with Tkinter.
                             </p>
                         </div>
-                        <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+                        <div class="col-lg-6 offset-lg-1 p-0 overflow-hidden shadow-lg">
                             <img class="rounded-lg-3" src="./assets/images/oracleLogo.jpeg" alt="" width="720"
                                 height="370">
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </div>
@@ -263,7 +284,7 @@
             <div class="jumbotron-container">
                 <div class="container my-5">
                     <div class="p-5 text-center bg-body-tertiary rounded">
-                        <img src="./assets/images/envelope.svg" class="bi mt-4 mb-3" width="50" height="50" />
+                        <img src="./assets/icons/envelope.svg" class="bi mt-4 mb-3" width="50" height="50" />
                         <h1 class="text-body-emphasis mb-5" style="
                   font-family: 'Open Sauce One', sans-serif;
                   font-weight: 300;
