--- a/16-DOM/index.html
+++ b/16-DOM/index.html
@@ -7,6 +7,18 @@
 </head>
 <body >
     <h1>Hello</h1>
+    <input type="checkbox" name="" id="">
+
+    <button>Click Me</button>
+
+    <ul>
+        <li class="list">
+            <a href="https://www.google.com">Google</a>
+        </li>
+        <li class="list">Second</li>
+        <li class="list">Third</li>
+    </ul>
+
     <script src="index.js"></script>
 </body>
 </html>
