--- a/16-DOM/index.html
+++ b/16-DOM/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body >
-    <h1>Hello</h1>
+    <h1 id="title">Hello</h1>
     <input type="checkbox" name="" id="">
 
     <button>Click Me</button>
