Enhance HTML and JavaScript
It will add emphasis to heading and list item, update anchor link, and improve text manipulation logging

--- a/16-DOM/index.html
+++ b/16-DOM/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body >
-    <h1 id="title">Hello</h1>
+    <h1 id="title"><em>Hello</em></h1>
     <input type="checkbox" name="" id="">
 
     <button>Click Me</button>
@@ -18,6 +18,8 @@
         <li class="list">Second</li>
         <li class="list">Third</li>
     </ul>
+
+    <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, quam velit! Maiores sed fugit ab alias. Facilis voluptatum reprehenderit vitae nostrum nesciunt. Ipsum quibusdam mollitia fuga qui optio eveniet vel.</em></p>
 
     <script src="index.js"></script>
 </body>
