Add initial HTML and JavaScript for Drum Kit game functionality

--- a/18-Advanced-JavaScript-and-DOM-Manipulation/index.html
+++ b/18-Advanced-JavaScript-and-DOM-Manipulation/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+  
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
     <button class="w drum">w</button>
@@ -21,6 +21,8 @@
     <button class="l drum">l</button>
   </div>
 
+
+  <script src="index.js"></script>
 
   <footer>
     Made with ❤️ in London.
