Add toggle functionality for list items to mark as done

--- a/18-Advanced-JavaScript-Objects/index.html
+++ b/18-Advanced-JavaScript-Objects/index.html
@@ -20,12 +20,30 @@
             font-family: 'Space Mono', monospace;
             font-size: 3rem;
         }
+
+        .done {
+  color: darkseagreen;
+  text-decoration: line-through solid black 2px;
+}
+
     </style>
 </head>
 <body>
     <div class="container">
         <p>Hello, world!</p>
     </div>
+
+    <p>Instructions for life:</p>
+
+<ul>
+  <li>Eat</li>
+  <li>Sleep</li>
+  <li>Repeat</li>
+</ul>
+
+
+
+
     <script src="index.js"></script>
 </body>
 </html>
