--- a/19-jQuery/index.html
+++ b/19-jQuery/index.html
@@ -9,6 +9,11 @@
 <body>
     
     <h1>Hello</h1>
+
+    <img src="drum.png" alt="">
+
+    <a href="http://google.com">Search</a>
+
     <button>Click me</button>
     <button>Click me</button>
     <button>Click me</button>
